# rippletide

./: .gitignore  README.md
cli/: package.json  (+1 more)
context-graph/: .gitignore  CLI_RELEASE_FLOW.md  Cargo.toml
context-graph/.claude/: settings.json
context-graph/.claude/commands/: plan-command.sh  plan.md  review-plan-command.sh
context-graph/.claude/hooks/: fetch-rules.sh
context-graph/.github/workflows/: release.yml
context-graph/examples/coding-agent/: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml
context-graph/examples/coding-agent/.claude/: settings.json
context-graph/examples/coding-agent/.claude/commands/: plan-command.sh  plan.md
context-graph/examples/coding-agent/.claude/hooks/: fetch-rules.sh  show-diff.sh  validate-diff.sh
context-graph/examples/coding-agent/.codex/: config.toml
context-graph/examples/coding-agent/.github/workflows/: release.yml
context-graph/examples/coding-agent/assets/: logo.ansi
context-graph/examples/coding-agent/src/: main.rs  planner.rs  rules.rs  ui.rs
context-graph/npm/rippletide-code/: package.json
context-graph/npm/rippletide-code-darwin-arm64/: package.json
context-graph/npm/rippletide-code-darwin-x64/: package.json
context-graph/npm/rippletide-code-linux-arm64/: package.json
context-graph/npm/rippletide-code-linux-x64/: package.json
context-graph/npm/rippletide-code-win32-arm64/: package.json
context-graph/npm/rippletide-code-win32-x64/: package.json
context-graph/scripts/: set_coding_agent_version.py
context-graph/src/: benchmark.rs  corpus_rules.json  main.rs  planner.rs  scan.rs  ui.rs
(+141 files in other folders)
