[package]
name = "rippletide-cli"
version = "0.5.11"
edition = "2021"

[dependencies]
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
open = "5"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"
colored = "2"
indicatif = "0.17"
console = "0.15"
walkdir = "2"
similar = "2"
