[package]
name = "rippletide-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
open = "5"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rpassword = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
